se agrega acceso a los link del footer, se agrega footer y nav a todas las paginas, con su debido link de acceso por cada opcion de pagina

--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
                 <li><a href="bags.html">Bags</a></li>
                 <li><a href="accesories.html">Accesories</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="#contacto">Contact</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="logoshop">
@@ -64,16 +64,16 @@
 
         <div class="tituloforms">
 
-            <h1 class="divtituloforms">Visita nuestras tiendas. </h1>
+            <h1 class="divtituloforms negrita-grande">Visita nuestras tiendas. </h1>
 
         </div>
         <div class="mapp">
             <div class="map2">
                 <div>
-                    <h2>New York</h2>
+                    <h2 class="negrita-grande">New York</h2>
                 </div>
                 <div>
-                    <h2>Panama</h2>
+                    <h2 class="negrita-grande">Panama</h2>
                 </div>
             </div>
             <div class="map2">
@@ -86,7 +86,7 @@
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4042068.8671730557!2d-82.75390365552462!3d8.368878777548757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa61583c8be2be3%3A0x79eee04d1fa59bcf!2sPanama!5e0!3m2!1sen!2sus!4v1716296772822!5m2!1sen!2sus"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>>
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
     <footer>
         <div class="footer_div">
             <div class="izquierda">
-                <img src="./assets/images/Property 1=Black.png" alt="Markly" />
+                <div class="footerizquierdat"><img src="./assets/images/Property 1=Black.png" alt="Markly" /></div>
                 <p>
                     We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
                     collection of
@@ -108,47 +108,66 @@
                 <div>
                     <ul>
                         <li><b>Company</b></li>
-                        <li><a href="#">Bags</a></li>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Community</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <br>
+                        <li><a href="bags.html">Bags</a></li>
+                        <li><a href="blog.html">Blogs</a></li>
+                        <li><a href="Contact.html">Community</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div>
                     <ul>
                         <li><b>Services</b></li>
-                        <li><a href="#">Bussines</a></li>
-                        <li><a href="#">Modifications</a></li>
-                        <li><a href="#">Morgans Care</a></li>
-                        <li><a href="#">Insurance</a></li>
-                        <li><a href="#">Warranty</a></li>
+                        <br>
+                        <li><a href="index.html">Bussines</a></li>
+                        <li><a href="index.html">Modifications</a></li>
+                        <li><a href="index.html">Morgans Care</a></li>
+                        <li><a href="index.html">Insurance</a></li>
+                        <li><a href="index.html">Warranty</a></li>
                     </ul>
                 </div>
                 <div>
                     <ul>
                         <li><b>Resource</b></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Newsletter</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">FAQS</a></li>
-                        <li><a href="#">Review</a></li>
+                        <br>
+                        <li><a href="index.html">News</a></li>
+                        <li><a href="index.html">Newsletter</a></li>
+                        <li><a href="index.html">Careers</a></li>
+                        <li><a href="index.html">FAQS</a></li>
+                        <li><a href="index.html">Review</a></li>
                     </ul>
                 </div>
                 <div>
                     <ul>
                         <li><b>Legal</b></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Tems of Used</a></li>
-                        <li><a href="#">Cookies</a></li>
-                        <li><a href="#">Sitemap</a></li>
+                        <br>
+                        <li><a href="index.html">Privacy Policy</a></li>
+                        <li><a href="index.html">Tems of Used</a></li>
+                        <li><a href="index.html">Cookies</a></li>
+                        <li><a href="index.html">Sitemap</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="abajo">
             <h3>©2024 Markly. All right reserved. </h3>
-            <div>
-                <img src="../PaginaWeb_Class/assets/images/Auto Layout Horizontal.png">
+            <div class="footer__social">
+
+                <a class=" footer__icons" href="https://www.facebook.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/facebook (2).png"></a>
+
+                <a class="footer__icons" href="https://www.twitter.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/gorjeo.png"></a>
+
+                <a class="footer__icons" href="https://www.instagram.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/instagram (1).png"></a>
+
+                <a class="footer__icons" href="https://www.linkedin.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/linkedin (1).png"></a>
+
+                <a class="footer__icons" href="https://www.youtube.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/youtube (1).png"></a>
+
             </div>
         </div>
     </footer>
