--- a/blog.html
+++ b/blog.html
@@ -1,27 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Markly Collections</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css " />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="./styles.css " />
+
 </head>
+
 <body>
-    <header class="headerBlog">
-        <div>
-            <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
-            <h1>Why Choose Markly?</h1>
-        </div>   
-        <div class="headVarios">
+    <header>
+
+        <div class="headerPpal">
             <div>
-                <h4>Discover our current best-sellers and customer favorites. Each product is a testament <br>to Markly's commitment to combining style, durability, and functionality.</h4>
+                <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
+                <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
             </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bags.html">Bags</a></li>
+                    <li><a href="accesories.html">Accesories</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="logoshop">
+                <img src="./assets/images/shopping-bag-03.png" alt="shopping" name="encabezado" id="encabezado">
+            </div>
+        </div>
+        <div class="headerBlog">
             <div>
-                <img src="./assets/images/flechaIzquierda.png" alt="flechaIzquierda">
-                <img src="./assets/images/flechaDerecha.png" alt="flechaDerecha">
+                <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
+                <h1>Why Choose Markly?</h1>
             </div>
-        </div>       
+            <div class="headVarios">
+                <div>
+                    <h4>Discover our current best-sellers and customer favorites. Each product is a testament <br>to
+                        Markly's
+                        commitment to combining style, durability, and functionality.</h4>
+                </div>
+                <div>
+                    <img src="./assets/images/flechaIzquierda.png" alt="flechaIzquierda">
+                    <img src="./assets/images/flechaDerecha.png" alt="flechaDerecha">
+                </div>
+            </div>
+        </div>
+
     </header>
     <main class="mainBlogBag">
         <section class="seccionTarjetas">
@@ -38,7 +66,8 @@
                         </tr>
                         <tr>
                             <td class="textoTarjetas">
-                                Meticulously crafted using premium materials, our bags are a testament to enduring quality.ensuring you're always prepared for any journey.
+                                Meticulously crafted using premium materials, our bags are a testament to enduring
+                                quality.ensuring you're always prepared for any journey.
                             </td>
                         </tr>
                         <tr>
@@ -48,9 +77,9 @@
                             <td>
                                 <img src="./assets/images/caja.png" alt="caja">
                             </td>
-                        </tr>    
-                    </tbody>        
-                </table>    
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <div class="tarjeta">
                 <table>
@@ -65,7 +94,8 @@
                         </tr>
                         <tr>
                             <td class="textoTarjetas">
-                                From the office to weekend getaways, Markly bags seamlessly blend style with practicality, ensuring you're always prepared for any journey.
+                                From the office to weekend getaways, Markly bags seamlessly blend style with
+                                practicality, ensuring you're always prepared for any journey.
                             </td>
                         </tr>
                         <tr>
@@ -78,7 +108,7 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>    
+            </div>
             <div class="tarjeta">
                 <table>
                     <thead>
@@ -92,7 +122,8 @@
                         </tr>
                         <tr>
                             <td class="textoTarjetas">
-                                We're committed to eco-friendly practices, sourcing materials responsibly and crafting bags that stand the test of time.
+                                We're committed to eco-friendly practices, sourcing materials responsibly and crafting
+                                bags that stand the test of time.
                             </td>
                         </tr>
                         <tr>
@@ -108,5 +139,86 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer_div">
+            <div class="izquierda">
+                <div class="footerizquierdat"><img src="./assets/images/Property 1=Black.png" alt="Markly" /></div>
+                <p>
+                    We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
+                    collection of
+                    premium bags
+                    that seamlessly blend style, functionality, and durability.
+                </p>
+                <!-- Contenido del div izquierdo -->
+            </div>
+            <div class="derecha">
+                <div>
+                    <ul>
+                        <li><b>Company</b></li>
+                        <br>
+                        <li><a href="bags.html">Bags</a></li>
+                        <li><a href="blog.html">Blogs</a></li>
+                        <li><a href="Contact.html">Community</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Services</b></li>
+                        <br>
+                        <li><a href="index.html">Bussines</a></li>
+                        <li><a href="index.html">Modifications</a></li>
+                        <li><a href="index.html">Morgans Care</a></li>
+                        <li><a href="index.html">Insurance</a></li>
+                        <li><a href="index.html">Warranty</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Resource</b></li>
+                        <br>
+                        <li><a href="index.html">News</a></li>
+                        <li><a href="index.html">Newsletter</a></li>
+                        <li><a href="index.html">Careers</a></li>
+                        <li><a href="index.html">FAQS</a></li>
+                        <li><a href="index.html">Review</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Legal</b></li>
+                        <br>
+                        <li><a href="index.html">Privacy Policy</a></li>
+                        <li><a href="index.html">Tems of Used</a></li>
+                        <li><a href="index.html">Cookies</a></li>
+                        <li><a href="index.html">Sitemap</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="abajo">
+            <h3>©2024 Markly. All right reserved. </h3>
+            <div class="footer__social">
+
+                <a class=" footer__icons" href="https://www.facebook.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/facebook (2).png"></a>
+
+                <a class="footer__icons" href="https://www.twitter.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/gorjeo.png"></a>
+
+                <a class="footer__icons" href="https://www.instagram.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/instagram (1).png"></a>
+
+                <a class="footer__icons" href="https://www.linkedin.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/linkedin (1).png"></a>
+
+                <a class="footer__icons" href="https://www.youtube.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/youtube (1).png"></a>
+
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
