--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p class="pequeno-opaco">At Markly, we believe in the power of a well-crafted bag to enhance your lifestyle.
               Explore our curated
               collection of premium bags that seamlessly blend style, functionality, and durability.</p>
-            <button class="button-s3">Shop Now!</button>
+            <a href="https://www.instagram.com/"><button class="button-s3">Shop Now!</button></a>
           </div>
         </article>
       </div>
@@ -145,9 +145,10 @@
   <footer>
     <div class="footer_div">
       <div class="izquierda">
-        <img src="./assets/images/Property 1=Black.png" alt="Markly" />
+        <div class="footerizquierdat"><img src="./assets/images/Property 1=Black.png" alt="Markly" /></div>
         <p>
-          We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated collection of
+          We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
+          collection of
           premium bags
           that seamlessly blend style, functionality, and durability.
         </p>
@@ -157,47 +158,66 @@
         <div>
           <ul>
             <li><b>Company</b></li>
-            <li><a href="#">Bags</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Community</a></li>
-            <li><a href="#">Contact</a></li>
+            <br>
+            <li><a href="bags.html">Bags</a></li>
+            <li><a href="blog.html">Blogs</a></li>
+            <li><a href="Contact.html">Community</a></li>
+            <li><a href="Contact.html">Contact</a></li>
           </ul>
         </div>
         <div>
           <ul>
             <li><b>Services</b></li>
-            <li><a href="#">Bussines</a></li>
-            <li><a href="#">Modifications</a></li>
-            <li><a href="#">Morgans Care</a></li>
-            <li><a href="#">Insurance</a></li>
-            <li><a href="#">Warranty</a></li>
+            <br>
+            <li><a href="index.html">Bussines</a></li>
+            <li><a href="index.html">Modifications</a></li>
+            <li><a href="index.html">Morgans Care</a></li>
+            <li><a href="index.html">Insurance</a></li>
+            <li><a href="index.html">Warranty</a></li>
           </ul>
         </div>
         <div>
           <ul>
             <li><b>Resource</b></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Newsletter</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">FAQS</a></li>
-            <li><a href="#">Review</a></li>
+            <br>
+            <li><a href="index.html">News</a></li>
+            <li><a href="index.html">Newsletter</a></li>
+            <li><a href="index.html">Careers</a></li>
+            <li><a href="index.html">FAQS</a></li>
+            <li><a href="index.html">Review</a></li>
           </ul>
         </div>
         <div>
           <ul>
             <li><b>Legal</b></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Tems of Used</a></li>
-            <li><a href="#">Cookies</a></li>
-            <li><a href="#">Sitemap</a></li>
+            <br>
+            <li><a href="index.html">Privacy Policy</a></li>
+            <li><a href="index.html">Tems of Used</a></li>
+            <li><a href="index.html">Cookies</a></li>
+            <li><a href="index.html">Sitemap</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="abajo">
       <h3>©2024 Markly. All right reserved. </h3>
-      <div>
-        <img src="../PaginaWeb_Class/assets/images/Auto Layout Horizontal.png">
+      <div class="footer__social">
+
+        <a class=" footer__icons" href="https://www.facebook.com/"><img class="footer__img"
+            src="../PaginaWeb_Class/assets/images/facebook (2).png"></a>
+
+        <a class="footer__icons" href="https://www.twitter.com/"><img class="footer__img"
+            src="../PaginaWeb_Class/assets/images/gorjeo.png"></a>
+
+        <a class="footer__icons" href="https://www.instagram.com/"><img class="footer__img"
+            src="../PaginaWeb_Class/assets/images/instagram (1).png"></a>
+
+        <a class="footer__icons" href="https://www.linkedin.com/"><img class="footer__img"
+            src="../PaginaWeb_Class/assets/images/linkedin (1).png"></a>
+
+        <a class="footer__icons" href="https://www.youtube.com/"><img class="footer__img"
+            src="../PaginaWeb_Class/assets/images/youtube (1).png"></a>
+
       </div>
     </div>
   </footer>
