--- a/accesories.html
+++ b/accesories.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesories - Markly Collections</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="reset.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css " />
 </head>
+
 <body>
 
-    <header class="headerAccesorios">
-        <div class="headVarAcc">
-            <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
-            <h6>Accesories</h6>
-        </div>    
-        <h1 class="display-4"><strong>Rhe Latest Trends</strong></h1>
+    <header>
+        <div class="headerPpal">
+            <div>
+                <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
+                <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bags.html">Bags</a></li>
+                    <li><a href="accesories.html">Accesories</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="logoshop">
+                <img src="./assets/images/shopping-bag-03.png" alt="shopping" name="encabezado" id="encabezado">
+            </div>
+        </div>
+        <div class="headerAccesorios">
+            <div class="headVarAcc">
+                <a href="./index.html"><img src="./assets/images/circuloNegro.png" alt="Home" class="logMin"></a>&nbsp;
+                <h6>Accesories</h6>
+            </div>
+            <h1 class="display-4"><strong>Rhe Latest Trends</strong></h1>
+        </div>
     </header>
     <main class="mainAccesorios">
         <section>
@@ -24,37 +48,124 @@
                 <div class="card tarjAccesorio" style="width: 19rem;">
                     <img src="./assets/images/carteraReflejo.png" class="card-img-top" alt="carteraReflejo">
                     <div class="card-body text-start">
-                      <h5 class="card-title">Styling Your Markly Bag for season</h5>
-                      <p class="card-text small">Explore the beauty of simplicity and learn how to make a statement with minimalistic styling featuring Markly bags</p><br>
-                      <p><strong><a href="./index.html" class="text-black">Read More</a></strong></p>
+                        <h5 class="card-title">Styling Your Markly Bag for season</h5>
+                        <p class="card-text small">Explore the beauty of simplicity and learn how to make a statement
+                            with minimalistic styling featuring Markly bags</p><br>
+                        <p><strong><a href="./index.html" class="text-black">Read More</a></strong></p>
                     </div>
                 </div>
 
                 <div class="card tarjAccesorio" style="width: 19rem;">
                     <img src="./assets/images/texturaCartera.png" class="card-img-top" alt="texturaCartera">
                     <div class="card-body text-start">
-                      <h5 class="card-title">Must-Have Bags for the Season</h5>
-                      <p class="card-text small">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley </p><br>
-                      <p><strong><a href="./index.html" class="text-black">Read More</a></strong></p>
+                        <h5 class="card-title">Must-Have Bags for the Season</h5>
+                        <p class="card-text small">Lorem Ipsum has been the industry's standard dummy text ever since
+                            the 1500s, when an unknown printer took a galley </p><br>
+                        <p><strong><a href="./index.html" class="text-black">Read More</a></strong></p>
                     </div>
                 </div>
 
                 <div class="card tarjAccesorio" style="width: 19rem;">
                     <img src="./assets/images/carteraManos.png" class="card-img-top" alt="carteraManos">
                     <div class="card-body text-start">
-                      <h5 class="card-title">Travel Essentials for Jet-Setters</h5>
-                      <p class="card-text small">Embark on a journey with us as we explore travel tips and essential accessories for the modern jet-setter.</p><br>
-                      <p><strong><a href="./index.html" class="text-black">Read More</a></strong></p>
+                        <h5 class="card-title">Travel Essentials for Jet-Setters</h5>
+                        <p class="card-text small">Embark on a journey with us as we explore travel tips and essential
+                            accessories for the modern jet-setter.</p><br>
+                        <p><strong><a href="./index.html" class="text-black">Read More</a></strong></p>
                     </div>
                 </div>
 
             </div>
-        </section>   
+        </section>
         <section>
             <div class="container-fluid row col-10 justify-content:center">
-                <iframe width="75%" height="250" src="https://www.youtube.com/embed/9lQwkSbLSUY?si=c1_TBEwN-z_U14aM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>    
-        </section>     
+                <iframe width="75%" height="250" src="https://www.youtube.com/embed/9lQwkSbLSUY?si=c1_TBEwN-z_U14aM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="footer_div">
+            <div class="izquierda">
+                <div class="footerizquierdat"><img src="./assets/images/Property 1=Black.png" alt="Markly" /></div>
+                <p>
+                    We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
+                    collection of
+                    premium bags
+                    that seamlessly blend style, functionality, and durability.
+                </p>
+                <!-- Contenido del div izquierdo -->
+            </div>
+            <div class="derecha">
+                <div>
+                    <ul>
+                        <li><b>Company</b></li>
+                        <br>
+                        <li><a href="bags.html">Bags</a></li>
+                        <li><a href="blog.html">Blogs</a></li>
+                        <li><a href="Contact.html">Community</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Services</b></li>
+                        <br>
+                        <li><a href="index.html">Bussines</a></li>
+                        <li><a href="index.html">Modifications</a></li>
+                        <li><a href="index.html">Morgans Care</a></li>
+                        <li><a href="index.html">Insurance</a></li>
+                        <li><a href="index.html">Warranty</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Resource</b></li>
+                        <br>
+                        <li><a href="index.html">News</a></li>
+                        <li><a href="index.html">Newsletter</a></li>
+                        <li><a href="index.html">Careers</a></li>
+                        <li><a href="index.html">FAQS</a></li>
+                        <li><a href="index.html">Review</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><b>Legal</b></li>
+                        <br>
+                        <li><a href="index.html">Privacy Policy</a></li>
+                        <li><a href="index.html">Tems of Used</a></li>
+                        <li><a href="index.html">Cookies</a></li>
+                        <li><a href="index.html">Sitemap</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="abajo">
+            <h3>©2024 Markly. All right reserved. </h3>
+            <div class="footer__social">
+
+                <a class=" footer__icons" href="https://www.facebook.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/facebook (2).png"></a>
+
+                <a class="footer__icons" href="https://www.twitter.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/gorjeo.png"></a>
+
+                <a class="footer__icons" href="https://www.instagram.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/instagram (1).png"></a>
+
+                <a class="footer__icons" href="https://www.linkedin.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/linkedin (1).png"></a>
+
+                <a class="footer__icons" href="https://www.youtube.com/"><img class="footer__img"
+                        src="../PaginaWeb_Class/assets/images/youtube (1).png"></a>
+
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
