se termina estilos pendientes de la sección 8 y se culmina pencientes desde mi tarea

--- a/index.html
+++ b/index.html
@@ -122,24 +122,28 @@
     </section>
 
     <!--sección 8-->
-    <section class="secciong">
-      <article>
-        <img src="./assets/images/carteraMiel.png" alt="carteraMiel" width="100%" />
-      </article>
-      <article>
-        <article>
-          <h2 name="contacto" id="contacto">Join the Markly Community ⎯ Subscribe to Our Newsletter</h2>
-        </article>
-        <article>
-          <p>Be the first to know about new arrivals, exclusive promotions, and the latest trends in the world of bags.
-            Sign up for our newsletter and stay connected with the Markly lifestyle.</p>
-        </article>
-        <article>
-          <input type="text" placeholder="Email Address">
-          <button>Submit</button>
-        </article>
-      </article>
-    </section>
+    <section>
+      <section class="seccion8">
+        <div class="seccionFlex8">
+          <img src="./assets/images/carteraMiel.png" alt="carteraMiel" width="100%" />
+          </article>
+          <article class="h1s8">
+            <article>
+              <h2 class="sec8" name=" contacto" id="contacto">Join the Markly Community ⎯ Subscribe to Our Newsletter
+              </h2>
+            </article>
+            <article class="ps8">
+              <p>Be the first to know about new arrivals, exclusive promotions, and the latest trends in the world of
+                bags.
+                Sign up for our newsletter and stay connected with the Markly lifestyle.</p>
+            </article>
+            <article class="secciong3">
+              <input class="input8" type="text" placeholder="Email">
+              <button class="btns8">Submit</button>
+            </article>
+          </article>
+        </div>
+      </section>
   </main>
 
   <footer>
