--- a/Contact.html
+++ b/Contact.html
@@ -38,25 +38,25 @@
         <div class=" formulario">
             <form action="https://getform.io/f/rbeqmemb" method="POST">
                 <label class="labelf" for="nombre">Nombre:</label><br>
-                <input class="inputf" type="text" id="nombre" name="nombre" required><br><br>
+                <input class="input1" type="text" id="nombre" name="nombre" required><br><br>
 
                 <label class="labelf" for="apellido">Apellido:</label><br>
-                <input class="inputf" type="text" id="apellido" name="apellido" required><br><br>
+                <input class="input1" type="text" id="apellido" name="apellido" required><br><br>
 
                 <label class="labelf" for="edad">Edad:</label><br>
-                <input class="inputf" type="number" id="edad" name="edad" required><br><br>
+                <input class="input1" type="number" id="edad" name="edad" required><br><br>
 
                 <label class="labelf" for="correo">Correo Electrónico:</label><br>
-                <input class="inputf" type="email" id="correo" name="correo" required><br><br>
+                <input class="input1" type="email" id="correo" name="correo" required><br><br>
 
                 <label class="labelf" for="fecha-nacimiento">Fecha de Nacimiento:</label><br>
-                <input class="inputf" type="date" id="fecha-nacimiento" name="fecha-nacimiento" required><br><br>
+                <input class="input1" type="date" id="fecha-nacimiento" name="fecha-nacimiento" required><br><br>
 
                 <label class="labelf" for="numero-contacto">Número de Contacto:</label><br>
-                <input class="inputf" type="tel" id="numero-contacto" name="numero-contacto" required><br><br>
+                <input class="input1" type="tel" id="numero-contacto" name="numero-contacto" required><br><br>
 
                 <label class="labelf" for="pais">País:</label><br>
-                <input class="inputf" type="text" id="pais" name="pais" required><br><br>
+                <input class="input1" type="text" id="pais" name="pais" required><br><br>
 
                 <button class="buttonf" type="submit">Enviar</button>
             </form>
