se termina configurando los link desde los inconos de la pagna y de shop

--- a/accesories.html
+++ b/accesories.html
@@ -17,8 +17,10 @@
     <header>
         <div class="headerPpal">
             <div>
-                <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
-                <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+                <a href="index.html">
+                    <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
+                    <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+                </a>
             </div>
             <nav>
                 <ul>
@@ -30,7 +32,9 @@
                 </ul>
             </nav>
             <div class="logoshop">
-                <img src="./assets/images/shopping-bag-03.png" alt="shopping" name="encabezado" id="encabezado">
+                <a href="https://www.bolsosmacoly.com/3-bolsos-en-sintetico"> <img
+                        src="./assets/images/shopping-bag-03.png" alt="shopping" name="encabezado" id="encabezado">
+                </a>
             </div>
         </div>
         <div class="headerAccesorios">
