--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
   <header class="headerPpal">
     <div>
-      <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
-      <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+      <a href="index.html">
+        <img class="logo" src="./assets/images/Frame.png" alt="Frame" />
+        <img class="logoname" src="./assets/images/Markly.png" alt="Markley" />
+      </a>
     </div>
     <nav>
       <ul>
@@ -27,7 +29,9 @@
       </ul>
     </nav>
     <div class="logoshop">
-      <img src="./assets/images/shopping-bag-03.png" alt="shopping" name="encabezado" id="encabezado">
+      <a href="https://www.bolsosmacoly.com/3-bolsos-en-sintetico"> <img src="./assets/images/shopping-bag-03.png"
+          alt="shopping" name="encabezado" id="encabezado">
+      </a>
     </div>
   </header>
 
