--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p class="pequeno-opaco">At Markly, we believe in the power of a well-crafted bag to enhance your lifestyle.
               Explore our curated
               collection of premium bags that seamlessly blend style, functionality, and durability.</p>
-            <a href="https://www.instagram.com/"><button class="button-s3">Shop Now!</button></a>
+              <a href="#encabezado"><button class="button-s3">Shop Now!</button></a>
           </div>
         </article>
       </div>
@@ -151,9 +151,10 @@
   </main>
 
   <footer>
+    <hr>
     <div class="footer_div">
       <div class="izquierda">
-        <div class="footerizquierdat"><img src="./assets/images/Property 1=Black.png" alt="Markly" /></div>
+        <div class="footerizquierdat"><a href="./index.html"><img src="./assets/images/Property 1=Black.png" alt="Markly" /></a></div>
         <p>
           We believe in the power of a well-crafted bag to enhance your lifestyle. Explore our curated
           collection of
@@ -163,7 +164,7 @@
         <!-- Contenido del div izquierdo -->
       </div>
       <div class="derecha">
-        <div>
+        <div class="links">
           <ul>
             <li><b>Company</b></li>
             <br>
@@ -173,7 +174,7 @@
             <li><a href="Contact.html">Contact</a></li>
           </ul>
         </div>
-        <div>
+        <div class="links">
           <ul>
             <li><b>Services</b></li>
             <br>
@@ -184,7 +185,7 @@
             <li><a href="index.html">Warranty</a></li>
           </ul>
         </div>
-        <div>
+        <div class="links">
           <ul>
             <li><b>Resource</b></li>
             <br>
@@ -195,7 +196,7 @@
             <li><a href="index.html">Review</a></li>
           </ul>
         </div>
-        <div>
+        <div class="links">
           <ul>
             <li><b>Legal</b></li>
             <br>
@@ -206,25 +207,25 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div><hr>
     <div class="abajo">
       <h3>©2024 Markly. All right reserved. </h3>
       <div class="footer__social">
 
-        <a class=" footer__icons" href="https://www.facebook.com/"><img class="footer__img"
-            src="../PaginaWeb_Class/assets/images/facebook (2).png"></a>
+        <a class=" footer__icons" href="https://www.facebook.com/" target="_blank"><img class="footer__img"
+            src="./assets/images/facebook (2).png"></a>
 
-        <a class="footer__icons" href="https://www.twitter.com/"><img class="footer__img"
-            src="../PaginaWeb_Class/assets/images/gorjeo.png"></a>
+        <a class="footer__icons" href="https://www.twitter.com/" target="_blank"><img class="footer__img"
+            src="./assets/images/gorjeo.png"></a>
 
-        <a class="footer__icons" href="https://www.instagram.com/"><img class="footer__img"
-            src="../PaginaWeb_Class/assets/images/instagram (1).png"></a>
+        <a class="footer__icons" href="https://www.instagram.com/" target="_blank"><img class="footer__img"
+            src="./assets/images/instagram (1).png"></a>
 
-        <a class="footer__icons" href="https://www.linkedin.com/"><img class="footer__img"
-            src="../PaginaWeb_Class/assets/images/linkedin (1).png"></a>
+        <a class="footer__icons" href="https://www.linkedin.com/" target="_blank"><img class="footer__img"
+            src="./assets/images/linkedin (1).png"></a>
 
-        <a class="footer__icons" href="https://www.youtube.com/"><img class="footer__img"
-            src="../PaginaWeb_Class/assets/images/youtube (1).png"></a>
+        <a class="footer__icons" href="https://www.youtube.com/" target="_blank"><img class="footer__img"
+            src="./assets/images/youtube (1).png"></a>
 
       </div>
     </div>
