--- a/Contact.html
+++ b/Contact.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="./styles.css " />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/styles.css " />
     <title>Markly</title>
 </head>
 
@@ -43,27 +43,21 @@
         </div>
         <div class=" formulario">
             <form action="https://getform.io/f/rbeqmemb" method="POST">
-                <label class="labelf" for="nombre">Nombre:</label><br>
+                <label class="labelf" for="nombre">Nombre Completo:</label><br>
                 <input class="input1" type="text" id="nombre" name="nombre" required><br><br>
-
-                <label class="labelf" for="apellido">Apellido:</label><br>
-                <input class="input1" type="text" id="apellido" name="apellido" required><br><br>
-
-                <label class="labelf" for="edad">Edad:</label><br>
-                <input class="input1" type="number" id="edad" name="edad" required><br><br>
 
                 <label class="labelf" for="correo">Correo Electrónico:</label><br>
                 <input class="input1" type="email" id="correo" name="correo" required><br><br>
 
-                <label class="labelf" for="fecha-nacimiento">Fecha de Nacimiento:</label><br>
-                <input class="input1" type="date" id="fecha-nacimiento" name="fecha-nacimiento" required><br><br>
-
                 <label class="labelf" for="numero-contacto">Número de Contacto:</label><br>
                 <input class="input1" type="tel" id="numero-contacto" name="numero-contacto" required><br><br>
 
-                <label class="labelf" for="pais">País:</label><br>
-                <input class="input1" type="text" id="pais" name="pais" required><br><br>
+                <label class="labelf" for="asunto">Asunto:</label><br>
+                <input class="input1" type="text" id="asunto" name="asunto" required><br><br>
 
+                <label class="labelf" for="mensaje">Mensaje:</label><br>
+                <input class="input1" type="text" id="mensaje" name="mensaje" required><br><br>
+                
                 <button class="buttonf" type="submit">Enviar</button>
             </form>
         </div>
