--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Markly Collections</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="./styles.css " />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/styles.css " />
 
 </head>
 
